--- a/src/renderer/tsconfig.renderer.json
+++ b/src/renderer/tsconfig.renderer.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "composite": false,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
   },
   "include": ["**/*"]
