--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -15,17 +15,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["../../*"],
-      "@/components/*": ["../components/*"],
-      "@/systems/*": ["../systems/*"],
-      "@/assets/*": ["../assets/*"],
-      "@/generators/*": ["../generators/*"],
-      "@/data/*": ["../data/*"],
-      "@/utils/*": ["../utils/*"]
-    }
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["**/*", "../types.d.ts"],
   "references": [{ "path": "../../tsconfig.node.json" }]
