--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,17 +14,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"],
-      "@/components/*": ["src/components/*"],
-      "@/systems/*": ["src/systems/*"],
-      "@/assets/*": ["src/assets/*"],
-      "@/generators/*": ["src/generators/*"],
-      "@/data/*": ["src/data/*"],
-      "@/utils/*": ["src/utils/*"]
-    }
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src/renderer/**/*", "src/shared/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
